  CHARSET fields better.  It also includes a patch to parameter
  parsing when semicolons appear inside quotes.

- sets.py now runs under Py2.2.  In addition, the argument restrictions
  for most set methods (but not the operators) have been relaxed to
  allow any iterable.  Also the Set.update() has been deprecated because
  it duplicates Set.union_update().

- Bug #778964:  random.seed() now uses fractional seconds so that
  rapid successive, seeding calls will produce different sequences.

- Bug #777664: Add Tkconstants.HIDDEN.

- Bug #781065: test_normalization is updated to the current
  URL of the Unicode 3.2 normalization file.

- Bug #782369:  fix memory leak in array module.

- Caching in _strptime.py has been re-introduced.  This leads to a large
  performance boost at the cost of not being thread-safe from locale
  changes while executing time.strptime() .

- Bug #783952: time.strptime() now properly handles issue of
  time.tzname[0] == time.tzname[1] while time.daylight is set to be
  true.

IDLE
----

- Bug #788378: Handle locale.error.

- Bug #774680: IDLE now does not fail to save the file anymore
  if the Tk buffer is not a Unicode string, yet eol_convention is.

- Bug #782510: The idna codec would fail to support names with a
  trailing full-stop.

Tools/Demos
-----------

- Pynche was fixed to not crash when there is no ~/.pynche file and no
  -d option was given.

Build
-----

- Patch #798202: detect redhat9 Tcl/Tk in configure script.

C API
-----

Windows
-------

Mac
---


What's New in Python 2.3 final?
===============================

*Release date: 29-Jul-2003*

IDLE
----

- Bug 778400:  IDLE hangs when selecting "Edit with IDLE" from explorer.
  This was unique to Windows, and was fixed by adding an -n switch to
  the command the Windows installer creates to execute "Edit with IDLE"
  context-menu actions.

- IDLE displays a new message upon startup:  some "personal firewall"